# flask-sqlalchemy-lazy-relationship-example

./: .gitignore  docker-compose.yml
services/db/: create.sql
services/server/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
services/server/migrations/versions/: 9e7203f10ac7_.py
services/server/project/: __init__.py  config.py
services/server/project/api/: __init__.py  models.py
services/server/project/api/address/: cruds.py  views.py
services/server/project/api/persons/: cruds.py  views.py
