[tool.poetry]
name = "flask-sqlalchemy-relationship-test"
version = "0.1.0"
description = "Flask Apis to check how lazy, eager, dynamic relationship works in SQLAlchemy."
authors = ["simon.islam <simon.islam@brilliant.com.bd>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
flask-restx = "^0.5.1"
requests = "^2.27.1"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.2"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
